--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "eslint-plugin-prettier": "^5.4.1",
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
+    "supabase": "^2.24.3",
     "tailwindcss": "^4.1.8"
   }
 }
