fix: resolve TypeScript errors and type mismatches
- Fix auth route handlers by properly handling cookie store in `callback/route.ts` and `confirm/route.ts`
- Update [useLuxicles.ts](cci:7://file:///Users/robertstanley/projects/luxicle/src/hooks/useLuxicles.ts:0:0-0:0) to correctly type [CreateLuxicleData](cci:2://file:///Users/robertstanley/projects/luxicle/src/hooks/useLuxicles.ts:33:0-40:2) to match [CreateLuxicleParams](cci:2://file:///Users/robertstanley/projects/luxicle/src/lib/supabase/queries.ts:54:0-70:2)
- Fix [searchLuxicles](cci:1://file:///Users/robertstanley/projects/luxicle/src/lib/supabase/queries.ts:320:0-340:1) call to pass parameters as an object
- Add proper type safety for cookie store handling with Supabase server client
- Ensure consistent type usage between frontend and API layer

--- a/.env.local.example
+++ b/.env.local.example
@@ -1,9 +1,11 @@
-NEXT_PUBLIC_SUPABASE_URL="your-supabase-url-here"
-NEXT_PUBLIC_SUPABASE_ANON_KEY="your-supabase-anon-key-here"
+# Remote Supabase Configuration (required)
+# Get these values from your Supabase project dashboard
+NEXT_PUBLIC_SUPABASE_URL="https://your-project-id.supabase.co"
+NEXT_PUBLIC_SUPABASE_ANON_KEY="your-anon-key-from-supabase-dashboard"
 
-# Optional: For server-side operations if you need a service role key (handle with extreme care)
-# SUPABASE_SERVICE_ROLE_KEY="your-supabase-service-role-key-here"
+# For server-side operations and seeding data (required for admin operations)
+SUPABASE_SERVICE_ROLE_KEY="your-service-role-key-from-supabase-dashboard"
 
-# NextAuth.js variables (if you plan to use NextAuth with Supabase as a database, not as an auth provider directly)
+# NextAuth.js variables (if needed)
 # NEXTAUTH_URL="http://localhost:3000" # Or your production URL
 # NEXTAUTH_SECRET="your-nextauth-secret-here" # Generate a strong secret
