--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "lint:fix": "next lint --fix",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:seed": "tsx lib/supabase/seed.ts"
   },
   "repository": {
     "type": "git",
@@ -30,6 +31,7 @@
     "@prisma/client": "^6.9.0",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.2.14",
     "@supabase/ssr": "^0.6.1",
@@ -42,6 +44,7 @@
     "@types/react-dom": "19.1.6",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.513.0",
     "next": "15.3.3",
     "next-auth": "^4.24.11",
@@ -65,6 +68,7 @@
     "postcss": "^8.5.4",
     "prettier": "^3.5.3",
     "supabase": "^2.24.3",
-    "tailwindcss": "^4.1.8"
+    "tailwindcss": "^4.1.8",
+    "tsx": "^4.19.4"
   }
 }
